Add Google Analytics and fix export leads
- Added GA4 tracking code to index.html (needs Measurement ID)
- Added event tracking for quiz_start, question_answered, quiz_completed, results_viewed, email_submitted
- Fixed Export Leads CSV button - now properly downloads file in production
- Shows alert when trying to export locally
- Updated intro text: 'The most accurate way to discover...'

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
+    <!-- Google Analytics 4 -->
+    <!-- Replace G-XXXXXXXXXX with your GA4 Measurement ID from Google Analytics > Admin > Data Streams -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+    
     <!-- Theme Color -->
     <meta name="theme-color" content="#0A0A0A" />
     <meta name="msapplication-TileColor" content="#0A0A0A" />
