Add GA4 Measurement ID G-Z6JQ1L1RMH

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
     <!-- Google Analytics 4 -->
-    <!-- Replace G-XXXXXXXXXX with your GA4 Measurement ID from Google Analytics > Admin > Data Streams -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6JQ1L1RMH"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
+      gtag('config', 'G-Z6JQ1L1RMH');
     </script>
     
     <!-- Theme Color -->
