Add reCAPTCHA protection and 6-month email rate limiting

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       gtag('config', 'G-Z6JQ1L1RMH');
     </script>
     
+    <!-- Google reCAPTCHA v3 (invisible) -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LcXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" async defer></script>
+    
     <!-- Theme Color -->
     <meta name="theme-color" content="#0A0A0A" />
     <meta name="msapplication-TileColor" content="#0A0A0A" />
